<resources>
  <string name="app_name">Moonstalker</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Moonstalker</string>
  <string name="nav_header_subtitle">VajnarTech</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="action_monitor">Monitor</string>
  <string name="calibration_ntfy">Manually move telescope to calibration object and confirm.</string>
  <string name="connecting">connecting</string>
  <string name="connected">connected</string>
  <string name="tracing">tracking</string>
  <string name="moving">Moving</string>
  <string name="initializing">initializing</string>
  <string name="calibrated">calibrated</string>
  <string name="move">Move</string>
  <string name="manual">Manual</string>
  <string name="track">Track</string>
  <string name="calibrate">Calibrate</string>
  <string name="not_connected">not connected</string>
  <string name="not_calibrated">not calibrated</string>
  <string name="calibrating">calibration</string>
  <string name="ready">ready</string>
  <string name="warning">Warning</string>
  <string name="connection_failed">Connection failed</string>
  <string name="connect">Connect</string>
  <string name="communicate">Communicate</string>
  <string name="to_calibrate">move to %s</string>
  <string name="ok">OK</string>
  <string name="to_manual_move">You will cancel the calibration. Proceed?</string>
  <string name="sett_device">Telescope device name</string>
  <string name="calibration_obj">Calibration object</string>
  <string name="constellation">Constellation</string>
  <string name="sky_object_string">Sky object</string>
  <string name="moonstalker">MoonStalker</string>

  <string-array name="sky_objects">
    <item>Polaris</item>
    <item>Capella</item>
    <item>Canopus</item>
    <item>Arcturus</item>
    <item>Vega</item>
    <item>Alphard</item>
    <item>Sirius</item>

  </string-array>
</resources>
