<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/move"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/move" />

    <item
      android:id="@+id/track"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/track" />

    <item
      android:id="@+id/manual"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/manual" />

  </group>

  <item android:title="@string/communicate">
    <menu>
      <item
        android:id="@+id/connect"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/connect" />
      <item
        android:id="@+id/calibrate"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/calibrate" />
    </menu>
  </item>

</menu>
